main/perl-extutils-cchecker/perl-extutils-cchecker-0.12-r1.log
pigz: not found
>>> perl-extutils-cchecker: Building main/perl-extutils-cchecker 0.12-r1 (using abuild 3.14.1-r4) started Sun, 18 May 2025 09:33:08 +0000
>>> perl-extutils-cchecker: Validating /home/packager/aports/main/perl-extutils-cchecker/APKBUILD...
>>> perl-extutils-cchecker: Analyzing dependencies...
>>> perl-extutils-cchecker: Installing for build: build-base perl perl-module-build perl-test-simple
(1/8) Installing libbz2 (1.0.8-r6)
(2/8) Installing perl (5.40.2-r0)
(3/8) Installing perl-module-build (0.4234-r1)
(4/8) Installing perl-test-simple (1.302209-r0)
(5/8) Installing .makedepends-perl-extutils-cchecker (20250518.093310)
(6/8) Installing perl-error (0.17030-r0)
(7/8) Installing perl-git (2.47.2-r0)
(8/8) Installing git-perl (2.47.2-r0)
Executing busybox-1.37.0-r12.trigger
OK: 299 MiB in 89 packages
>>> perl-extutils-cchecker: Cleaning up srcdir
>>> perl-extutils-cchecker: Cleaning up pkgdir
>>> perl-extutils-cchecker: Cleaning up tmpdir
>>> perl-extutils-cchecker: Fetching https://cpan.metacpan.org/authors/id/P/PE/PEVANS/ExtUtils-CChecker-0.12.tar.gz
Connecting to cpan.metacpan.org (146.75.122.217:443)
saving to '/var/cache/distfiles/ExtUtils-CChecker-0.12.tar.gz.part'
ExtUtils-CChecker-0. 100% |********************************| 21019  0:00:00 ETA
'/var/cache/distfiles/ExtUtils-CChecker-0.12.tar.gz.part' saved
>>> perl-extutils-cchecker: Fetching https://cpan.metacpan.org/authors/id/P/PE/PEVANS/ExtUtils-CChecker-0.12.tar.gz
>>> perl-extutils-cchecker: Checking sha512sums...
ExtUtils-CChecker-0.12.tar.gz: OK
>>> perl-extutils-cchecker: Unpacking /var/cache/distfiles/ExtUtils-CChecker-0.12.tar.gz...
Created MYMETA.yml and MYMETA.json
Creating new 'Build' script for 'ExtUtils-CChecker' version '0.12'
Building ExtUtils-CChecker
t/00use.t ........... ok
test-30105-1.c:1:9: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'bar'
    1 | int foo bar splot
      |         ^~~
test-30105-1.c:1:9: error: unknown type name 'bar'
t/01run.t ........... ok
test-30130-1.c:1:9: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'bar'
    1 | int foo bar splot
      |         ^~~
test-30130-1.c:1:9: error: unknown type name 'bar'
t/02assert.t ........ ok
t/03accessors.t ..... ok
t/04module_build.t .. ok
t/05defines_to.t .... ok
t/10find_cflags.t ... skipped: This test requires gcc
t/99pod.t ........... skipped: Test::Pod 1.00 required for testing POD
All tests successful.
Files=8, Tests=28,  2 wallclock secs ( 0.04 usr  0.01 sys +  1.56 cusr  0.30 csys =  1.91 CPU)
Result: PASS
>>> perl-extutils-cchecker: Entering fakeroot...
Building ExtUtils-CChecker
Installing /home/packager/aports/main/perl-extutils-cchecker/pkg/perl-extutils-cchecker/usr/share/perl5/vendor_perl/ExtUtils/CChecker.pm
Installing /home/packager/aports/main/perl-extutils-cchecker/pkg/perl-extutils-cchecker/usr/share/man/man3/ExtUtils::CChecker.3pm
>>> perl-extutils-cchecker-doc*: Running split function doc...
'usr/share/man' -> '/home/packager/aports/main/perl-extutils-cchecker/pkg/perl-extutils-cchecker-doc/usr/share/man'
>>> perl-extutils-cchecker-doc*: Preparing subpackage perl-extutils-cchecker-doc...
>>> perl-extutils-cchecker-doc*: Running postcheck for perl-extutils-cchecker-doc
>>> perl-extutils-cchecker*: Running postcheck for perl-extutils-cchecker
>>> perl-extutils-cchecker*: Preparing package perl-extutils-cchecker...
>>> perl-extutils-cchecker-doc*: Tracing dependencies...
>>> perl-extutils-cchecker-doc*: Package size: 5.1 KB
>>> perl-extutils-cchecker-doc*: Compressing data...
>>> perl-extutils-cchecker-doc*: Create checksum...
pigz: not found
>>> perl-extutils-cchecker-doc*: Create perl-extutils-cchecker-doc-0.12-r1.apk
>>> perl-extutils-cchecker*: Tracing dependencies...
	perl
>>> perl-extutils-cchecker*: Package size: 18.9 KB
>>> perl-extutils-cchecker*: Compressing data...
>>> perl-extutils-cchecker*: Create checksum...
pigz: not found
>>> perl-extutils-cchecker*: Create perl-extutils-cchecker-0.12-r1.apk
>>> perl-extutils-cchecker: Build complete at Sun, 18 May 2025 09:33:14 +0000 elapsed time 0h 0m 6s
>>> perl-extutils-cchecker: Cleaning up srcdir
>>> perl-extutils-cchecker: Cleaning up pkgdir
>>> perl-extutils-cchecker: Uninstalling dependencies...
(1/8) Purging .makedepends-perl-extutils-cchecker (20250518.093310)
(2/8) Purging perl-module-build (0.4234-r1)
(3/8) Purging perl-test-simple (1.302209-r0)
(4/8) Purging git-perl (2.47.2-r0)
(5/8) Purging perl-git (2.47.2-r0)
(6/8) Purging perl-error (0.17030-r0)
(7/8) Purging perl (5.40.2-r0)
(8/8) Purging libbz2 (1.0.8-r6)
Executing busybox-1.37.0-r12.trigger
OK: 261 MiB in 81 packages
>>> perl-extutils-cchecker: Updating the main/x86_64 repository index...
>>> perl-extutils-cchecker: Signing the index...
pigz: not found
